# scm-mcp-mssp

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.toml.example  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml  settings.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml  pr-checks.yml  release.yml  security-scan.yml
docs/: TOOL_REFERENCE.md  ssr-intake-power-automate.md
docs/planner-agent/: ARCHITECTURE.md  TOOL_MANIFEST.md
scripts/: gen_all_asbuilt.py  gen_docs.py  gen_endpoint_catalog.py  gen_tool_from_spec.py  md_to_docx.py
security/compliance/: soc2-controls.yaml
security/config/tls/: nginx-mcp-proxy.conf
security/hardening/: harden-server.sh  scm-mcp.service  ssh-hardening.conf  sysctl-hardening.conf
security/siem/: rsyslog-scm-mcp.conf
security/siem/detection-rules/: auth-failures.sigma.yml  tenant-abuse.sigma.yml
src/scm_mcp_mssp/: __init__.py  cli.py  cli_commands.py  cli_menus.py  cli_ops.py  dashboard.py  history.py  server.py  server_http.py
src/scm_mcp_mssp/audit/: __init__.py  asbuilt_report.py  asbuilt_verify.py  bpa_checks.py  cloner.py  commit_preview.py  drift_baseline.py  dspt_controls.py  extractor.py  incident_rca.py  insights_extractor.py  iso27001_controls.py  models.py  msr_report.py  ncsc_controls.py  ncsc_templates.py  nist_templates.py  pan_references.py  report.py  sdwan_topo.py  tiers.py
src/scm_mcp_mssp/auth/: __init__.py  oauth.py  sdwan.py
src/scm_mcp_mssp/config/: __init__.py  settings.py
src/scm_mcp_mssp/planner/: __init__.py  backend.py  engine.py  estate.py  executor.py  ir.py  loop.py  manifest.py  nightly.py  schema.py  store.py
src/scm_mcp_mssp/resources/: __init__.py  endpoint_catalog.json  endpoint_catalog.py  tenant.py  tools_manifest.yaml
src/scm_mcp_mssp/tools/: __init__.py  adem.py  adnsr.py  ai_advisor.py  aiops.py  audit.py  cdl_logforwarding.py  compliance.py  config_orch.py  csp_licensing.py  deployment.py  dlp.py  (+21 more)
tests/unit/: test_adem.py  test_asbuilt_verify.py  test_auth.py  test_cdl_logforwarding_tools.py  test_cli_commands.py  test_commit_preview.py  test_compliance.py  test_config.py  test_config_orch_tools.py  test_csp_licensing.py  test_dashboard_expiry.py  test_dlp_incidents_tools.py  test_dns_security_tools.py  test_drift_baseline.py  test_email_dlp_tools.py  test_endpoint_catalog.py  test_extract_adem.py  test_history.py  test_hld_report.py  test_incident_rca.py  test_insights.py  test_ipenrich.py  test_msr_report.py  test_mt_monitor.py  test_ops_helpers.py  test_pab_checks.py  test_pab_tools.py  test_planner_estate.py  test_planner_ir.py  test_planner_loop.py  test_planner_manifest.py  test_planner_nightly.py  test_planner_tools.py  test_renewal_brief.py  test_saas_posture.py  test_sdwan_depth_tools.py  test_service_status.py  test_spi_pab_tools.py  test_ssr.py  test_ssr_webhook.py  (+3 more)
(+6 files in other folders)
